--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- local jspsych library -->
     <script src="/Users/garrettgreeley/Documents/GitHub/jsPsych/jspsych.js"></script>
     <script src="/Users/garrettgreeley/Documents/GitHub/jsPsych/plugins/jspsych-html-keyboard-response.js"></script>
+    <script src="/Users/garrettgreeley/Documents/GitHub/base_memory_exp/stim_lists.js"></script>
     <link href="/Users/garrettgreeley/Documents/GitHub/jsPsych/css/jspsych.css" rel="stylesheet" type="text/css"></link>
 
     <style>
