complete base exp and mod plugins

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <!-- local jspsych library -->
     <script src="/Users/garrettgreeley/Documents/GitHub/jsPsych/jspsych.js"></script>
     <script src="/Users/garrettgreeley/Documents/GitHub/jsPsych/plugins/jspsych-html-keyboard-response.js"></script>
+    <!--<script src="/Users/garrettgreeley/Documents/GitHub/base_memory_exp/plugin_edits/jspsych-html-keyboard-response-persist.js"></script>-->
+    <script src="/Users/garrettgreeley/Documents/GitHub/jsPsych/plugins/jspsych-html-button-response.js"></script>
     <script src="/Users/garrettgreeley/Documents/GitHub/jsPsych/plugins/jspsych-survey-html-form.js"></script>
+    <script src="/Users/garrettgreeley/Documents/GitHub/base_memory_exp/plugin_edits/jspsych-survey-html-response-delay-button.js"></script>
     <script src="/Users/garrettgreeley/Documents/GitHub/base_memory_exp/plugin_edits/jspsych-survey-html-form-timed-NEW.js"></script>
     <script src="/Users/garrettgreeley/Documents/GitHub/base_memory_exp/stim_lists.js"></script>
     <link href="/Users/garrettgreeley/Documents/GitHub/base_memory_exp/custom_jspsych.css" rel="stylesheet" type="text/css"></link>
