--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="/Users/garrettgreeley/Documents/GitHub/jsPsych/plugins/jspsych-html-button-response.js"></script>
     <script src="/Users/garrettgreeley/Documents/GitHub/jsPsych/plugins/jspsych-survey-html-form.js"></script>
     <script src="/Users/garrettgreeley/Documents/GitHub/base_memory_exp/plugin_edits/jspsych-survey-html-response-delay-button.js"></script>
-    <script src="/Users/garrettgreeley/Documents/GitHub/base_memory_exp/plugin_edits/jspsych-survey-html-response-timed.js"></script>
+    <!--<<script src="/Users/garrettgreeley/Documents/GitHub/base_memory_exp/plugin_edits/jspsych-survey-html-response-timed.js"></script></script>-->
     <script src="/Users/garrettgreeley/Documents/GitHub/base_memory_exp/stim_lists.js"></script>
     <link href="/Users/garrettgreeley/Documents/GitHub/base_memory_exp/custom_jspsych.css" rel="stylesheet" type="text/css"></link>
 
